boltffi_backend/tests/jni/snapshots/jni__associated__jni_bridge_renders_record_associated_callables.snap
---
source: boltffi_backend/tests/jni/associated.rs
expression: "rendered_fixture(\"associated/record_callables\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    double x;
    double y;
} ___Point;
___Point boltffi_init_record_demo_point_origin(void);
double boltffi_method_record_demo_point_distance(___Point receiver, ___Point other);
FfiBuf_u8 boltffi_method_record_demo_person_rename(const uint8_t *receiver_ptr, uintptr_t receiver_len, const uint8_t *name_ptr, uintptr_t name_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni byte-array helpers>
<jni record helpers>
JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1init_1record_1demo_1point_1origin(JNIEnv *env, jclass cls) {
    (void)cls;

    (void)env;
    ___Point __boltffi_result = boltffi_init_record_demo_point_origin();

    return boltffi_jni_record_to_byte_array(env, &__boltffi_result, (uintptr_t)sizeof(__boltffi_result));
}

JNIEXPORT jdouble JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1record_1demo_1point_1distance(JNIEnv *env, jclass cls, jbyteArray receiver, jbyteArray other) {
    (void)cls;

    ___Point __boltffi_receiver_value;
    ___Point __boltffi_other_value;

    if (!boltffi_jni_read_record(env, receiver, (uintptr_t)sizeof(___Point), &__boltffi_receiver_value)) {
        goto __boltffi_error;
    }
    if (!boltffi_jni_read_record(env, other, (uintptr_t)sizeof(___Point), &__boltffi_other_value)) {
        goto __boltffi_error;
    }

    (void)env;
    double __boltffi_result = boltffi_method_record_demo_point_distance(__boltffi_receiver_value, __boltffi_other_value);

    return (jdouble)__boltffi_result;
__boltffi_error:
    return 0;
}

JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1record_1demo_1person_1rename(JNIEnv *env, jclass cls, jbyteArray receiver, jbyteArray name) {
    (void)cls;

    jbyte *__boltffi_receiver_ptr = NULL;
    jsize __boltffi_receiver_len = 0;
    jbyte *__boltffi_name_ptr = NULL;
    jsize __boltffi_name_len = 0;

    if (receiver == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI array argument was null");
        goto __boltffi_error;
    }
    __boltffi_receiver_len = (*env)->GetArrayLength(env, receiver);
    __boltffi_receiver_ptr = (*env)->GetByteArrayElements(env, receiver, NULL);
    if (__boltffi_receiver_ptr == NULL) {
        goto __boltffi_error;
    }
    if (name == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI array argument was null");
        goto __boltffi_error;
    }
    __boltffi_name_len = (*env)->GetArrayLength(env, name);
    __boltffi_name_ptr = (*env)->GetByteArrayElements(env, name, NULL);
    if (__boltffi_name_ptr == NULL) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_method_record_demo_person_rename((const uint8_t *)__boltffi_receiver_ptr, (uintptr_t)__boltffi_receiver_len, (const uint8_t *)__boltffi_name_ptr, (uintptr_t)__boltffi_name_len);

    if (__boltffi_receiver_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, receiver, __boltffi_receiver_ptr, JNI_ABORT);
        __boltffi_receiver_ptr = NULL;
    }
    if (__boltffi_name_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, name, __boltffi_name_ptr, JNI_ABORT);
        __boltffi_name_ptr = NULL;
    }

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    if (__boltffi_receiver_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, receiver, __boltffi_receiver_ptr, JNI_ABORT);
        __boltffi_receiver_ptr = NULL;
    }
    if (__boltffi_name_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, name, __boltffi_name_ptr, JNI_ABORT);
        __boltffi_name_ptr = NULL;
    }
    return NULL;
}
