boltffi_backend/tests/jni/snapshots/jni__associated__jni_bridge_writes_mutable_direct_record_receivers_back.snap
---
source: boltffi_backend/tests/jni/associated.rs
expression: "rendered_fixture(\"associated/mutable_record_receiver\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    double x;
    double y;
} ___Point;
FfiStatus boltffi_method_record_demo_point_move_by(___Point receiver, ___Point *receiver_out, double dx);

#ifdef __cplusplus
}
#endif
===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni status helper>
static bool boltffi_jni_direct_buffer_address(JNIEnv *env, jobject buffer, jlong required_capacity, void **address) {
    if (buffer == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer argument was null");
        return false;
    }
    if (required_capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer length was negative");
        return false;
    }
    jlong capacity = (*env)->GetDirectBufferCapacity(env, buffer);
    if (capacity < 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI argument was not a direct buffer");
        return false;
    }
    if (capacity < required_capacity) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer capacity was too small");
        return false;
    }
    *address = (*env)->GetDirectBufferAddress(env, buffer);
    if (*address == NULL && required_capacity != 0) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI direct buffer address was unavailable");
        return false;
    }
    return true;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1method_1record_1demo_1point_1move_1by(JNIEnv *env, jclass cls, jobject receiver, jdouble dx) {
    (void)cls;

    void *__boltffi_receiver_ptr = NULL;
    ___Point __boltffi_receiver_value;
    ___Point __boltffi_receiver_out;

    if (!boltffi_jni_direct_buffer_address(env, receiver, (jlong)sizeof(___Point), &__boltffi_receiver_ptr)) {
        goto __boltffi_error;
    }
    memcpy(&__boltffi_receiver_value, __boltffi_receiver_ptr, sizeof(___Point));

    FfiStatus __boltffi_status = boltffi_method_record_demo_point_move_by(__boltffi_receiver_value, &__boltffi_receiver_out, dx);

    if (__boltffi_status.code != 0) {
        boltffi_jni_throw_status(env, __boltffi_status);
        return;
    }

    memcpy(__boltffi_receiver_ptr, &__boltffi_receiver_out, sizeof(___Point));
    return;
__boltffi_error:
    return;
}
